test/spec_vectors/conversions/fail/module_9.wat
(module (func (result i64) (i64.trunc_f32_s (i32.const 0))))